--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,28 @@ body {
     height: 100%;
 }
 
+main {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+footer {
+    border-style: solid;
+    border-width: thick;
+    border-color: darkorchid;
+}
+
+section {
+    margin: 0 auto;
+
+}
+
+.clear-fix {
+    clear: both;
+}
+
 .logo {
     justify-self: start;
     border-style: solid;
@@ -17,57 +39,52 @@ body {
     font-size: 32px;
 }
 
-.maincont, .single-row {
-    border-style: solid;
-    border-width: thick;
-    width: auto;
-    height: 100%;
-}
-
-.maincont {
-    border-color: red;
-    margin: 0 auto;
-}
-
-.single-row{
-    border-color: blue;
-}
-
-.col-left, .col-right {
-    border-style: solid;
-    border-width: medium;
-    float: left;
-    padding-left: 5px;
-    padding-right: 5px;
-    margin: auto 2px;
-    height: 80%;
-}
-
-.col-left {
-    width: 60%;
-    border-color: orange;
-}
-
-.col-left img{
-    width: 100%;
-    border-radius: 6px;
-}
-
-.col-right {
-    width: 30%;
-    border-color: springgreen;
-}
-
-.clear-fix {
-    clear: both;
-}
-
 .logo .name {
     text-align: left;
     padding-left: 10px;
     padding-top: 15px;
 }
 
-.mainsection {
-    
+.photo{
+    flex: 1;
+    border-style: solid;
+    border-width: thick;
+    width: auto;
+    height: 100%;
+    border-color: red;
+    margin-left: 5%;
+}
+.photo img{
+    width: 100%;
+    border-radius: 6px;
+}
+
+.text {
+    flex: 2;
+    width: 50%;
+    height: 100%;
+    color: red;
+    border-style: solid;
+    border-width: thick;
+    border-color: aqua;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+.hello {
+    border-style: solid;
+    border-width: thick;
+    border-color: darkgoldenrod;
+}
+
+.circles {
+    border-style: solid;
+    border-width: thick;
+    border-color: hotpink;
+}
+
+.bla {
+    border-style: solid;
+    border-width: thick;
+    border-color: blueviolet;
 }
